Practice set 5 map filter and reduce

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>Hello vijay pal</p>
-    <script src="array.js"></script>
-    <script src="PrintStarPattern.js"></script>
+    <!-- <script src="array.js"></script> -->
+    <!-- <script src="PrintStarPattern.js"></script> -->
+    <script src="practice-map-filter-reduce.js"></script>
 </body>
 </html>
