--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Hello vijay pal</p>
     <!-- <script src="array.js"></script> -->
     <!-- <script src="PrintStarPattern.js"></script> -->
-    <script src="practice-map-filter-reduce.js"></script>
+    <!-- <script src="practice-map-filter-reduce.js"></script> -->
+    <script src="findprimenumber.js"></script>
 </body>
 </html>
